fixed card alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ main {
     margin: 150px auto 0 auto;
     display: flex;
     flex-wrap: wrap;
-    max-width: 1000px;
+    justify-content: center;
 }
 
 .card {
@@ -37,6 +37,7 @@ main {
     width: 250px;
     border-radius: 20px;
     background: var(--cardbg);
+    max-width: 300px;
 }
 
 pre {
